[gd_scene load_steps=14 format=2]

[ext_resource path="res://assests/test_menu/Sprite-0004.png" type="Texture" id=1]
[ext_resource path="res://font/Comfortaa/Comfortaa-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/game_over.gd" type="Script" id=3]
[ext_resource path="res://audio/lose.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/pressed.wav" type="AudioStream" id=5]
[ext_resource path="res://assests/others/score.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.196078, 1, 1 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.862745, 0.87451, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0784314, 0.541176, 0, 1 )

[sub_resource type="DynamicFont" id=6]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0, 0, 1 )

[node name="game_over" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 207, 354 )
scale = Vector2( 1.05679, 1.01667 )
texture = ExtResource( 1 )

[node name="gameoverlabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 211.0
margin_right = 399.0
margin_bottom = 281.0
custom_colors/font_color = Color( 0.87451, 1, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Game Over"
align = 1
valign = 1

[node name="menu_button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 63.0
margin_top = 335.0
margin_right = 337.0
margin_bottom = 386.0
custom_colors/font_color = Color( 1, 0.643137, 0.352941, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Main Menu"
icon_align = 1

[node name="normal_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 2.0
autoplay = true

[node name="pressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="my_score_label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 211.0
margin_top = 426.0
margin_right = 245.0
margin_bottom = 477.0
rect_pivot_offset = Vector2( -289, -28 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "0"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="my_score_label"]
position = Vector2( -43.3281, 22.6719 )
scale = Vector2( 1.05225, 1.05225 )
texture = ExtResource( 6 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LineEdit" type="LineEdit" parent="Control"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 130.0
margin_top = 72.0
margin_right = 289.0
margin_bottom = 108.0

[node name="Button" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 163.0
margin_top = 127.0
margin_right = 260.0
margin_bottom = 165.0
text = "Enter"

[node name="Label" type="Label" parent="Control"]
margin_left = 153.0
margin_top = 52.0
margin_right = 258.0
margin_bottom = 66.0
text = "Enter your name"

[connection signal="pressed" from="menu_button" to="." method="_on_menuButton_pressed"]
[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
